examples/negative/ffi/extern_param_kaikai_type.kai
# Negative fixture (#536 / FFI surface validation): an `extern "C"
# fn` declaration accepts a kaikai-only type (`[Int]`, the linked-
# list type) as a parameter. Same reasoning as the return-slot
# fixture — the runtime layout is not C-ABI compatible and the
# emitted call site would marshal an opaque pointer the C side
# cannot decode. The check covers parameter slots too, not only
# the return.

extern "C" fn sum_list(xs: [Int]) : Int / Ffi

fn main() : Int / Ffi = sum_list([1, 2, 3])
